@@ -32,13 +32,13 @@ STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_FIXEDSYS | WS_VISIBLE | WS_BORD
 CAPTION "Fuse - Load Binary Data"
 FONT 8,"Ms Shell Dlg 2",400,0,1
 BEGIN
-    CTEXT           "Filename",IDC_TEXT_FILENAME,5,5,34,15,SS_CENTERIMAGE
-    LTEXT           "",IDC_FILENAME,45,5,290,15,SS_CENTERIMAGE
-    PUSHBUTTON      "Browse...",IDC_BROWSE,340,5,50,14
-    CTEXT           "Start",IDC_TEXT_START,5,25,34,15,SS_CENTERIMAGE
-    EDITTEXT        IDC_START,45,25,344,15,ES_AUTOHSCROLL
-    CTEXT           "Length",IDC_TEXT_LENGTH,5,45,34,15,SS_CENTERIMAGE
-    EDITTEXT        IDC_LENGTH,45,45,344,15,ES_AUTOHSCROLL
-    DEFPUSHBUTTON   "OK",IDC_OK,275,65,50,14
-    PUSHBUTTON      "Cancel",IDC_CANCEL,335,65,50,14
+    CTEXT           "Filename",IDC_BINARY_STATIC_FILENAME,5,5,34,15,SS_CENTERIMAGE
+    LTEXT           "",IDC_BINARY_STATIC_PATH,45,5,290,15,SS_CENTERIMAGE
+    PUSHBUTTON      "Browse...",IDC_BINARY_BUTTON_BROWSE,340,5,50,14
+    CTEXT           "Start",IDC_BINARY_STATIC_START,5,25,34,15,SS_CENTERIMAGE
+    EDITTEXT        IDC_BINARY_EDIT_START,45,25,344,15,ES_AUTOHSCROLL
+    CTEXT           "Length",IDC_BINARY_STATIC_LENGTH,5,45,34,15,SS_CENTERIMAGE
+    EDITTEXT        IDC_BINARY_EDIT_LENGTH,45,45,344,15,ES_AUTOHSCROLL
+    DEFPUSHBUTTON   "OK",IDOK,275,65,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,335,65,50,14
 END
