@@ -2592,3 +2592,5 @@
 	 dialog. Joystick will be read using Windows' mmsystem library (Marek).
 20080327 ui/win32/{win32ui.c,win32mouse.c,win32internals.h,Makefile.am}: Win32:
 	 Implementation of the mouse functions (Marek).
+20080327 ui/win32/{binary.{c,h,rc}}: Win32: Added prefix BINARY to Binary
+	 dialogs ids, used Windows' constants for OK and Cancel (Marek).
